syntax = "proto3";
package ethereum.validator.accounts.v2;

import "google/protobuf/empty.proto";

option csharp_namespace = "Ethereum.Validator.Accounts.V2";
option go_package = "github.com/prysmaticlabs/prysm/v4/proto/prysm/v1alpha1/validator-client;validatorpb";
option java_multiple_files = true;
option java_outer_classname = "WebProto";
option java_package = "org.ethereum.validator.accounts.v2";
option php_namespace = "Ethereum\\Validator\\Accounts\\V2";

// Web APIs such as the Keymanager APIs will no longer validate JWTs on the endpoint. Users should no longer expose the validator APIs to the public.
// option deprecated = true; can't be added yet as it's used for keymanager API
// DEPRECATED: Prysm Web UI and associated endpoints will be fully removed in a future hard fork.
service Auth {
    rpc Initialize(google.protobuf.Empty) returns (InitializeAuthResponse) {
        option (google.api.http) = {
            get: "/v2/validator/initialize",
        };
    }
}

// DEPRECATED: Prysm Web UI and associated endpoints will be fully removed in a future hard fork.
message InitializeAuthRequest {
    option deprecated = true;
    string token = 1;
}

// DEPRECATED: Prysm Web UI and associated endpoints will be fully removed in a future hard fork.
message InitializeAuthResponse {
    option deprecated = true;
    bool has_signed_up = 1;
    bool has_wallet = 2;
}
